--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
- <main id="blog-div">
+ <div id="blog-div" role="main">
     <div id="div2">
     <img src="photo.jpeg" id="image" alt="Blog preview image">
   <p id="yellow-par">
@@ -40,7 +40,7 @@
     </div>
 </div>
   </div>
- </main>
+ </div>
  <footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
