--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   </style>
 </head>
 <body>
-
- <div id="blog-div" role="main">
+<main>
+ <div id="blog-div">
     <div id="div2">
     <img src="photo.jpeg" id="image" alt="Blog preview image">
   <p id="yellow-par">
@@ -25,7 +25,7 @@
   <h5 id="h5">
   Published 21 Dec 2023
   </h5>
-  <h1 id="h1">
+  <h1 id="h3">
   HTML & CSS foundations
   </h1>
   <p id="p1">
@@ -38,9 +38,10 @@
   Greg Hooper
   </h4>
     </div>
-</div>
+   </div>
   </div>
- </div>
+</div>
+</main>
  <footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
